Fixed styling to improve readability

--- a/src/components/Gallery/GalleryItem/style.scss
+++ b/src/components/Gallery/GalleryItem/style.scss
@@ -1,5 +1,12 @@
 .gallery-item {
+  background-color: white;
+  border-radius: 12px;
+  box-shadow: 8px 8px 12px 0px rgb(0 0 0 / 25%);
+  margin: 20px;
+  padding: 20px;
   figcaption {
     font-size: 24px;
+    text-align: center;
+    max-width: 350px;
   }
 }
