--- a/src/components/Gallery/style.scss
+++ b/src/components/Gallery/style.scss
@@ -3,4 +3,5 @@
   grid-template-columns: 1fr 1fr 1fr;
   justify-content: center;
   justify-items: center;
+  width: min-content;
 }
